# marketing_campaign_reviewer

./: .gitignore  README.md  demographic_feedback_report.md  output.txt  pyproject.toml  requirements.txt  writeup.md
src/marketing_campaign_reviewer/: crew.py  main.py
src/marketing_campaign_reviewer/config/: agents.yaml  tasks.yaml
